# darkmatter

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.hermes-marmot  Dockerfile.openclaw-marmot  Justfile  README.md  docker-compose.yml  release.md
.config/: nextest.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: bindings.yaml  ci.yml  dm-agent-binaries.yml  nightly-conformance.yml  quic-broker-image.yml
crates/agent-connector/: AGENTS.md  Cargo.toml  README.md
crates/agent-connector/src/: allowlist.rs  bootstrap.rs  connection.rs  event_projection.rs  inbound.rs  lib.rs  media_temp.rs  messaging.rs  stream.rs  stream_session.rs  tests.rs  validation.rs
crates/agent-control/src/: lib.rs
crates/agent-stream-compose/src/: lib.rs  tests.rs
crates/cgka-conformance/: AGENTS.md  Cargo.toml  README.md
crates/cgka-conformance-simulator/: AGENTS.md  Cargo.toml  PROPERTY_TESTS.md  README.md  SCENARIOS.md
crates/cgka-conformance-simulator/src/: AGENTS.md  client.rs  family.rs  lib.rs  oracle.rs  report.rs  scenario.rs  vector.rs
crates/cgka-conformance-simulator/tests/: canonical_scenarios.rs  canonicalization_contract.rs  issue_494_admin_promote_delivery.rs  openmls_replay_probe.rs  proptest_invariants.rs  report_runner.rs  vector_artifacts.rs
crates/cgka-conformance-simulator/vectors/: AGENTS.md  admin-policy-update.v1.json  concurrent-invite-fork-recovery.v1.json  delayed-past-epoch-app-message.v1.json  drop-queued.v1.json  group-data-fork-recovery.v1.json  group-data-update.v1.json  invite-member.v1.json  invite-publish-fail.v1.json  manifest.v1.json  partition-clear-leave.v1.json  publish-fail.v1.json  queue-faults.v1.json  three-client-message-exchange.v1.json
crates/cgka-conformance/src/: canonicalization.rs  client.rs  convergence.rs  lib.rs  (+2 more)
crates/cgka-engine/: AGENTS.md  Cargo.toml  README.md
crates/cgka-session/: AGENTS.md  Cargo.toml  README.md
crates/cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dm/: AGENTS.md  CHANGELOG.md  README.md
crates/marmot-account/: AGENTS.md  Cargo.toml  README.md
crates/marmot-account/src/: error.rs  home.rs  io.rs  key_package.rs  lib.rs  nip49_export.rs  runtime.rs  secret_store.rs
crates/marmot-account/tests/: home.rs  runtime.rs
crates/marmot-app/: AGENTS.md  Cargo.toml  README.md
crates/marmot-c/: AGENTS.md  Cargo.toml  README.md  marmot-c.pc.in
crates/marmot-c/include/: marmot.h
crates/marmot-c/src/: dispatch.rs  lib.rs  runtime.rs
crates/marmot-forensics/: Cargo.toml
crates/marmot-uniffi/: Cargo.toml  README.md  kotlin-bindings.sh  uniffi.toml  xcframework.sh
crates/storage-memory/: Cargo.toml  README.md
crates/storage-sqlite/: README.md
crates/test-harness/: AGENTS.md  Cargo.toml  README.md
crates/traits/: AGENTS.md  Cargo.toml  README.md
crates/transport-nostr-adapter/: AGENTS.md  Cargo.toml  README.md
crates/transport-nostr-peeler/: AGENTS.md  Cargo.toml  README.md
crates/transport-quic-broker/: README.md
crates/transport-quic-stream/: Cargo.toml
docs/: learnings.md  quic-broker-deployment.md  required-features.md
docs/marmot-architecture/: AGENTS.md  audit-logging.md  cgka-engine-canonicalization-contract.md  cgka-engine-spec.md  distributed-convergence.md  hermes-agent-production-runbook.md  hermes-openclaw-agent-integration-plan.md  index.md  relay-delivery-telemetry.md  relay-observability.md  telemetry.md
docs/release/: dm-homebrew.md
formal/tamarin/: README.md  distributed_convergence_v0.spthy  policy_cases.json
packaging/systemd/: hermes-marmot.env.example
plans/: 2026-04-22-cgka-engine-production-refactor-v1.md  2026-05-04-cgka-conformance-simulator-vectors-and-chaos-roadmap.md  2026-05-04-cgka-test-harness-vectors-and-chaos-roadmap.md
scripts/: cut-dm-agent-release.sh  hermes_marmot_bootstrap_agent.py  hermes_marmot_configure_gateway.py  hermes_marmot_container_entrypoint.sh  hermes_marmot_dev_setup.sh  hermes_marmot_dev_teardown.sh  install-hermes-marmot.sh  install-openclaw-marmot.sh  openclaw_marmot_container_entrypoint.sh  openclaw_marmot_dev_teardown.sh  reset_tui_dev.sh  wait_for_relays.sh
spec/: AGENTS.md  README.md  app-components.md  implementation-model.md  laws.md  layout.md  mip-coverage.md  principles.md  publish-lifecycle.md
spec/app-components/: AGENTS.md  README.md  admin-policy-v1.md  agent-text-stream-quic-v1.md  group-avatar-url-v1.md  group-blossom-image-v1.md  group-encrypted-media-v1.md  group-image-v1.md  group-profile-v1.md  message-retention-v1.md  nostr-routing-v1.md
spec/features/: AGENTS.md  README.md  agent-text-streams-quic.md  encrypted-media.md  multi-device.md  push-notifications.md  self-remove.md
spec/foundation/: AGENTS.md  README.md  account-identity-proof-v1.md  application-messages.md  canonical-encoding.md  errors.md  host-safety.md  identity.md  key-packages.md  mls-protocol.md  registries.md  wire-envelopes.md
spec/protocol-core/: AGENTS.md  README.md  convergence.md  group-messaging.md  group-setup.md  group-state.md  inbound-processing.md  joining.md  member-departure.md  publish-lifecycle.md  retained-history.md
spec/state-machine/: README.md  convergence.md  group-state.md  inbound-processing.md  publish-lifecycle.md  retained-history.md
spec/transports/: AGENTS.md  README.md  nostr.md  quic.md
spike/: Cargo.toml  README.md
spike/crates/cgka-engine/: Cargo.toml
spike/crates/cgka-engine/src/: capabilities.rs  context.rs  engine.rs  lib.rs  types.rs
spike/crates/dm-cli/: Cargo.toml
spike/crates/dm-cli/src/: main.rs
spike/crates/mdk-spike/: Cargo.toml
spike/crates/mdk-spike/src/: context.rs  engine.rs  extensions.rs  lib.rs  registry.rs
spike/crates/nostr-adapter/: Cargo.toml
spike/crates/nostr-adapter/src/: lib.rs
spike/crates/nostr-mls-peeler/: Cargo.toml
spike/crates/nostr-mls-peeler/src/: lib.rs
spike/crates/transport/: Cargo.toml
spike/crates/transport/src/: adapter.rs  lib.rs  peeler.rs
spike/crates/whitenoise-core-spike/: Cargo.toml
spike/crates/whitenoise-core-spike/src/: lib.rs
(+355 files in other folders)
