[workspace]
resolver = "3"
members = [
    "crates/cgka-engine",
    "crates/transport",
    "crates/mdk-spike",
    "crates/nostr-adapter",
    "crates/nostr-mls-peeler",
    "crates/whitenoise-core-spike",
    "crates/dm-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
# crypto
openmls = "0.8"
openmls_basic_credential = "0.5"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"
tls_codec = "0.4"

# nostr
nostr = { version = "0.44", features = ["std", "nip44", "nip59"] }
nostr-sdk = { version = "0.44" }

# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# utils
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chacha20poly1305 = "0.10"
base64 = "0.22"

# workspace-internal
cgka-engine = { path = "crates/cgka-engine" }
transport = { path = "crates/transport" }
mdk-spike = { path = "crates/mdk-spike" }
nostr-adapter = { path = "crates/nostr-adapter" }
nostr-mls-peeler = { path = "crates/nostr-mls-peeler" }
whitenoise-core-spike = { path = "crates/whitenoise-core-spike" }
