[package]
name = "marmot-account"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
cgka-session.workspace = true
cgka-traits.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
cgka-engine.workspace = true
storage-sqlite.workspace = true
tempfile.workspace = true
tokio.workspace = true
