[package]
name = "cgka-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true
