[package]
name = "dm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dm"
path = "src/main.rs"

[dependencies]
cgka-engine.workspace = true
transport.workspace = true
mdk-spike.workspace = true
nostr-adapter.workspace = true
nostr-mls-peeler.workspace = true
whitenoise-core-spike.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
serde_json.workspace = true
