[package]
name = "mdk-spike"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-engine.workspace = true
transport.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
tls_codec.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
