[package]
name = "nostr-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-engine.workspace = true
transport.workspace = true
base64.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
