[package]
name = "nostr-mls-peeler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-engine.workspace = true
transport.workspace = true
async-trait.workspace = true
nostr.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
rand.workspace = true
serde_json.workspace = true
chacha20poly1305.workspace = true
base64.workspace = true
