[package]
name = "whitenoise-core-spike"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-engine.workspace = true
transport.workspace = true
mdk-spike.workspace = true
nostr-adapter.workspace = true
nostr-mls-peeler.workspace = true
anyhow.workspace = true
serde_json.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
